--- a/.github/workflows/kube-setup.yaml
+++ b/.github/workflows/kube-setup.yaml
@@ -7,6 +7,9 @@ on:
         required: true
         default: dev | staging | prod
 
+env:
+  KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+
 jobs:
   setup:
     runs-on: ubuntu-latest
@@ -21,7 +24,7 @@ jobs:
         uses: actions-hub/kubectl@master
         continue-on-error: true
         env:
-          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+          KUBE_CONFIG: ${{ env.KUBE_CONFIG_DATA }}
         with:
           args: create namespace ${{ secrets.NAMESPACE }}
 
@@ -30,7 +33,7 @@ jobs:
         uses: wahyd4/kubectl-helm-action@master
         continue-on-error: true
         env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+          KUBE_CONFIG_DATA: ${{ env.KUBE_CONFIG_DATA }}
         with:
           args: |
             helm repo add jetstack https://charts.jetstack.io
@@ -41,7 +44,7 @@ jobs:
         uses: wahyd4/kubectl-helm-action@master
         continue-on-error: true
         env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+          KUBE_CONFIG_DATA: ${{ env.KUBE_CONFIG_DATA }}
         with:
           args: |
             helm repo add nginx-stable https://helm.nginx.com/stable
