--- a/statefulset/ingress_tmpl.yml
+++ b/statefulset/ingress_tmpl.yml
@@ -9,9 +9,9 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/configuration-snippet: |
-      rewrite ^/$ https://$host/auth/realms/vidis/protocol/openid-connect/auth?client_id=account-console&response_type=code&scope=openid&redirect_uri=https%3A%2F%2F$HOSTNAME%2Fauth%2Frealms%2Fvidis%2Faccount%2F%23%2F redirect;
-      rewrite ^/auth$ https://$host/auth/realms/vidis/protocol/openid-connect/auth?client_id=account-console&response_type=code&scope=openid&redirect_uri=https%3A%2F%2F$HOSTNAME%2Fauth%2Frealms%2Fvidis%2Faccount%2F%23%2F redirect;
-      rewrite ^/auth/$ https://$host/auth/realms/vidis/protocol/openid-connect/auth?client_id=account-console&response_type=code&scope=openid&redirect_uri=https%3A%2F%2F$HOSTNAME%2Fauth%2Frealms%2Fvidis%2Faccount%2F%23%2F redirect;
+      rewrite ^/$ https://vidis.schule redirect;
+      rewrite ^/auth$ https://vidis.schule redirect;
+      rewrite ^/auth/$ https://vidis.schule redirect;
     cert-manager.io/cluster-issuer: letsencrypt
   labels:
     app: keycloak
