--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -31,11 +31,12 @@ jobs:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
         with:
           args: |
+            source .github/environments/${{ inputs.environment }}.env
             helm repo add codecentric https://codecentric.github.io/helm-charts
             helm repo update
-            helm upgrade keycloak codecentric/keycloak --install -f statefulset/values.yaml -n ${{ secrets.NAMESPACE }} \
-              --set image.tag=${{ secrets.VERSION }},extensions={${{ secrets.KC_EXTENSIONS }}},extensionsVersion=${{ secrets.KC_EXT_VERSION }} \
-              --set autoscaling.minReplicas=${{ secrets.KC_MIN_PODS }},autoscaling.maxReplicas=${{ secrets.KC_MAX_PODS }} \
+            helm upgrade keycloak codecentric/keycloak --install -f statefulset/values.yaml -n $NAMESPACE \
+              --set image.tag=$VERSION,extensions={$KC_EXTENSIONS},extensionsVersion=$KC_EXT_VERSION \
+              --set autoscaling.minReplicas=$KC_MIN_PODS,autoscaling.maxReplicas=$KC_MAX_PODS \
               --set db.name=${{ secrets.KC_DB_NAME }},db.address=${{ secrets.KC_DB_ADDRESS }},db.user=${{ secrets.KC_DB_USER }},db.password=${{ secrets.KC_DB_PASSWORD }} \
               --set admin.user=${{ secrets.KC_USER }},admin.password=${{ secrets.KC_USER_PASSWORD }} \
               --set nexus.user=${{ secrets.NEXUS_THEME_USER }},nexus.password=${{ secrets.NEXUS_THEME_PASSWORD }}
@@ -45,6 +46,8 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: apply -f statefulset/ingress.yml -n ${{ secrets.NAMESPACE }}
+          args: |
+            source .github/environments/${{ inputs.environment }}.env
+            apply -f statefulset/ingress.yml -n $NAMESPACE
 
       - run: echo "This job's status is ${{ job.status }}."
