--- a/.github/environments/prod.env
+++ b/.github/environments/prod.env
@@ -1,6 +1,8 @@
+set -x
 VERSION=16.1.1
 NAMESPACE=keycloak
 KC_MIN_PODS=3
 KC_MAX_PODS=8
 KC_EXTENSIONS=hmac-mapper,remove-user-on-logout,whitelist-authenticator
 KC_EXT_VERSION=1.1.1
+set +x
